--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -7,13 +7,18 @@ notebook:
   sleep_interval: 1
   export_json: true
   json_output_file: "agent_notebook_cells.json"
+  context_max_cells: 2  # 用于上下文的最大cell数量
+  include_code_in_context: true  # 是否在上下文中包含代码
+  include_markdown_in_context: true  # 是否在上下文中包含markdown
+  include_outputs_in_context: true  # 是否在上下文中包含执行结果
+  add_timestamp: true
 
 deepseek:
   api_key: ""  # 将在运行时输入
   base_url: "https://api.deepseek.com"
-  model: "deepseek-chat"
+  model: "deepseek-reasoner"
   temperature: 0.7
-  max_tokens: 2000
+  max_tokens: 1000000
 
 agent:
   max_retries: 3
