--- a/agentnote/utils/config.yaml
+++ b/agentnote/utils/config.yaml
@@ -1,27 +1,28 @@
 notebook:
   update_mode: "append"
-  notebook_name: "agent_generated_notebook.ipynb"
-  code_cell_tag: "agent-code-cell"
-  markdown_cell_tag: "agent-markdown-cell"
+  notebook_name: "ooda_generated_notebook.ipynb"
+  code_cell_tag: "ooda-code-cell"
+  markdown_cell_tag: "ooda-markdown-cell"
   max_cells: 300
   sleep_interval: 1
   export_json: true
-  json_output_file: "agent_notebook_cells.json"
-  context_max_cells: 2  # 用于上下文的最大cell数量
-  include_code_in_context: true  # 是否在上下文中包含代码
-  include_markdown_in_context: true  # 是否在上下文中包含markdown
-  include_outputs_in_context: true  # 是否在上下文中包含执行结果
+  json_output_file: "ooda_notebook_cells.json"
+  context_max_cells: 5
+  include_code_in_context: true
+  include_markdown_in_context: true
+  include_outputs_in_context: true
   add_timestamp: true
 
 deepseek:
   api_key: ""  # 将在运行时输入
   base_url: "https://api.deepseek.com"
-  model: "deepseek-reasoner"
+  model: "deepseek-chat"
   temperature: 0.7
   max_tokens: 1000000
 
-agent:
+ooda:
   max_retries: 3
   retry_delay: 2
   enable_auto_fix: true
   enable_execution: true
+  max_circles: 3
