import logger fix evaluator output

--- a/agentnote/prompts/prompts.yaml
+++ b/agentnote/prompts/prompts.yaml
@@ -149,7 +149,7 @@ evaluation_prompts:
     其他上下文信息: {context}
     
     请基于阶段目标和实际最终产生的内容进行对比，判断该阶段是否达到了预期目标。
-    如果阶段目标已经实现，请回答"是"，否则回答"否"。只回答是否，不要输出任何其他内容。
+    请先简要分析当前任务完成情况，列出不足之处，最后在最后一行输出'是'或'否'。
 
   circle_success: |
     请评估当前OODA循环是否成功完成了任务。
@@ -159,7 +159,7 @@ evaluation_prompts:
     其他上下文信息: {context}
     
     请基于循环目标和实际最终产生的内容进行对比，判断该循环是否达成了任务目标。
-    如果循环目标已经实现，请回答"是"，否则回答"否"。只回答是否，不要输出任何其他内容。
+    请先简要分析当前任务完成情况，列出不足之处，最后在最后一行输出'是'或'否'。
 
 error_recovery:
   task_retry: |
