--- a/agentnote/prompts/prompts.yaml
+++ b/agentnote/prompts/prompts.yaml
@@ -148,8 +148,8 @@ evaluation_prompts:
     阶段产生的所有内容: {cell_context}
     其他上下文信息: {context}
     
-    请基于阶段目标和实际最终产生的内容进行对比，判断该阶段是否达到了预期目标。
-    请先简要分析当前任务完成情况，根据只要目标主要部分已完成, 就判定为成功, 最后在最后一行输出, 如果成功输出'是', 如果失败输出'否'。
+    请基于阶段目标和实际最终产生的内容进行对比，判断该阶段是否达到了预期目标, 只要目标主要部分已完成, 就判定为成功
+    请先简要分析当前任务完成情况，在最后一行输出, 如果成功输出'是', 如果失败输出'否'。
 
   circle_success: |
     请评估当前OODA循环是否成功完成了任务。
@@ -158,8 +158,8 @@ evaluation_prompts:
     循环产生的所有内容: {cell_context}
     其他上下文信息: {context}
     
-    请基于循环目标和实际最终产生的内容进行对比，判断该循环是否达成了任务目标。
-    请先简要分析当前任务完成情况，根据只要目标主要部分已完成, 就判定为成功, 最后在最后一行输出, 如果成功输出'是', 如果失败输出'否'。
+    请基于循环目标和实际最终产生的内容进行对比，判断该循环是否达到了预期目标, 只要目标主要部分已完成, 就判定为成功
+    请先简要分析当前任务完成情况，在最后一行输出, 如果成功输出'是', 如果失败输出'否'。
 
 error_recovery:
   task_retry: |
